
2020-06-18  Ron Norman <rjn@inglenet.com>
	* coblocal.h,common.h: add flags for LS_INSTAB (Like MF INSERTTAB)
	* common.c: Accept COB_MF_LS_INSTAB/mf_ls_instab in runtime.cfg
	* fileio.c: Handle "ls_instab" option similar to MF INSERTTAB

2020-06-16  Ron Norman <rjn@inglenet.com>
	* call.c: added cob_get_dbl_param & cob_put_dbl_param
	* common.h: added cob_get_dbl_param & cob_put_dbl_param

2020-06-12  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed problem with updating key definitions
				from BDB data dictionary file
				
2020-05-16  Ron Norman <rjn@inglenet.com>

	* fisam.c: Fixed problem with READ PREVIOUS/DELETE/READ PREVIOUS
				when reading thru a group of duplicate keys

2020-04-28  Ron Norman <rjn@inglenet.com>
	* common.h,move.c: cob_set_llint is now passed a value to do size
				checking. It also now checks module->flag_binary_truncate
				and truncates the data as needed

2020-04-26  Ron Norman <rjn@inglenet.com>
	* common.h,move.c,sysdefines.h: Updates for speeding up arithmetic

2020-04-26  Ron Norman <rjn@inglenet.com>

	* fileio.c: For LINE SEQUENTIAL and OPEN I-O some platforms
				(SUNOS for one) require that a fflush be done
				between each read/write of the file

2020-04-17  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed compile warnings
	* fisam.c: Fixed sync/commit routine 
	* fbdb.c: Fixed I/O routine pointers

2020-04-14  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed to NOT mix I/O to FILE * via putc and 'int fd' via write
	            'FILE *' is buffered and 'int fd' is NOT so the data
				can end up in a very strange sequence in the file

2020-04-14  Ron Norman <rjn@inglenet.com>

	* common.h: Add fields for implementing LINE SEQUENTIAL pipes
	* fileio.c: Add code for LINE SEQUENTIAL pipes

2020-04-01  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: changed "FUNCTION/USING parameter" to "FUNCTION/USING argument"
	* screenio.c: moved screen initialization from internal to external
	  called function
